welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: value update is not a member of String
	if (litMessage()=R) {
            ^