welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage()) {
	if (litMessage()=R) {
		droite();avance();
	}}
	
